phoenix-platform/platform-k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phoenix-platform-ingress
spec:
  rules:
  - host: phoenix-platform.local
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: react-app
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
